--- a/app/src/main/res/layout-land/activity_assessment_details.xml
+++ b/app/src/main/res/layout-land/activity_assessment_details.xml
@@ -7,117 +7,148 @@
     android:background="@color/backgroundColor"
     tools:context=".UI.AssessmentDetails">
 
-    <ScrollView
+
+    <EditText
+        android:id="@+id/assessmentName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:autofillHints="Assessment Name"
+        android:ems="10"
+        android:hint="Assessment Name"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentStartDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <EditText
+        android:id="@+id/assessmentType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:autofillHints="Assessment Type"
+        android:ems="10"
+        android:hint="Assessment Type"
+        android:inputType="text"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentStartDate" />
+
+    <EditText
+        android:id="@+id/assessmentStartDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="54dp"
+        android:layout_weight="1"
+        android:autofillHints="Start Date"
+        android:ems="10"
+        android:hint="Start Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentType"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="70dp"
+        android:layout_weight="1"
+        android:text="-"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentType"
+        app:layout_constraintEnd_toStartOf="@+id/assessmentEndDate"
+        app:layout_constraintStart_toEndOf="@+id/assessmentStartDate"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/assessmentEndDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="54dp"
+        android:layout_weight="1"
+        android:autofillHints="End Date"
+        android:ems="10"
+        android:hint="End Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentType"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Spinner
+        android:id="@+id/courseSpinner"
+        android:layout_width="295dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="333dp"
+        android:backgroundTint="@color/textColor"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentSaveButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentType"
+        app:layout_constraintVertical_bias="0.12" />
+
+    <Button
+        android:id="@+id/assessmentSaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentCancelButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/assessmentCancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="#838181"
+        android:text="CANCEL"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="1dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="332dp"
+        android:text="Courses:"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentSaveButton"
+        app:layout_constraintEnd_toStartOf="@+id/courseSpinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentType"
+        app:layout_constraintVertical_bias="0.12" />
 
-            <EditText
-                android:id="@+id/assessmentName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="Assessment Name"
-                android:ems="10"
-                android:hint="Assessment Name"
-                android:textAlignment="center"
-                android:inputType="text"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor" />
-
-            <EditText
-                android:id="@+id/assessmentType"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="Assessment Type"
-                android:ems="10"
-                android:hint="Assessment Type"
-                android:inputType="text"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/assessmentStartDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints="Start Date"
-                    android:ems="10"
-                    android:hint="Start Date"
-                    android:inputType="none"
-                    android:textColor="@color/textColor"
-                    android:textColorHint="@color/textColor" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="63dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="-"
-                    android:textAlignment="center"
-                    android:textColor="@color/textColor"
-                    android:textColorHint="@color/textColor"
-                    android:textSize="20sp" />
-
-                <EditText
-                    android:id="@+id/assessmentEndDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints="End Date"
-                    android:ems="10"
-                    android:hint="End Date"
-                    android:inputType="none"
-                    android:textColor="@color/textColor"
-                    android:textColorHint="@color/textColor" />
-            </LinearLayout>
-
-            <Spinner
-                android:id="@+id/courseSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:backgroundTint="@color/textColor"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor" />
-
-
-            <Button
-                android:id="@+id/assessmentSaveButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="SAVE" />
-
-            <Button
-                android:id="@+id/assessmentCancelButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#838181"
-                android:text="CANCEL" />
-        </LinearLayout>
-    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
